Added menu style tag to site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -72,6 +72,10 @@ a.navbar-brand {
     word-break: normal;
 }
 
+.navbar-menu {
+    font-weight: bold;
+}
+
 /* Provide sufficient contrast against white background */
 a {
     color: #0366d6;
