Added div wrapper to navbar logo/brand in _Layout.cshtml

--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -28,9 +28,11 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-navbar border-bottom box-shadow mb-3">
-        <img class="navbar-logo" src="~/image/space-needle.svg" />
-        <div class="container">
+        <div>
+            <img class="navbar-logo" src="~/image/space-needle.svg" />
             <a class="navbar-brand" asp-area="" asp-page="/Index">LetsGoSEA</a>
+        </div>
+        <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-menu">Menu</span>
