Added style tag for navbar container in site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -108,6 +108,12 @@ a {
     margin-right: 1em;
 }
 
+.navbar-big-container {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
