Added navbar toggler border tag in _Layout.cshtml

--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
            
             <div class="container">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                        aria-expanded="false" aria-label="Toggle navigation" id="navbar-toggle-border">
                     <span class="navbar-menu">Menu</span>
                     <span class="navbar-toggler-icon"></span>
                 </button>
