Added navbar toggler border style to site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -114,6 +114,11 @@ a {
     align-items: center;
 }
 
+#navbar-toggle-border {
+    border-width: 0.05em;
+    border-color: black;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
