--- a/src/Pages/Neighborhood/Update.cshtml
+++ b/src/Pages/Neighborhood/Update.cshtml
@@ -105,7 +105,7 @@
         <!--Allow user to upload photo(s)-->
          <div>
             <label asp-for="neighborhood.imagePath">Upload New Photo (May select multiple photos to upload)</label>
-            <input type="file" name="files" class="form-control" id="image-upload" accept="image/*" multiple>
+            <input type="file" name="files" class="form-control" id="image-upload" accept="image/jpeg, image/png" multiple>
             <span class="text-danger visually-hidden" id="image-upload-error-text">Please upload a valid image</span>
         </div>
 
