--- a/src/Pages/Neighborhood/Create.cshtml
+++ b/src/Pages/Neighborhood/Create.cshtml
@@ -66,7 +66,7 @@
 
         <!--Allow user to upload photo(s)-->
         <div>
-            <label asp-for="neighborhood.imagePath">Upload Photo (May select multiple photos to upload, Only accept JPG and PNG images)</label>
+            <label asp-for="neighborhood.uploadedImages">Upload Photo (May select multiple photos to upload, Only accept JPG and PNG images)</label>
             <input type="file" name="files" class="form-control" id="image-upload"  accept="image/jpeg, image/png" multiple>
             <span class="text-danger visually-hidden" id="image-upload-error-text">Please upload a valid image</span>
         </div>
