Updated searchbar's bootstrap class in Index.cshtml

--- a/src/Pages/Explore/Index.cshtml
+++ b/src/Pages/Explore/Index.cshtml
@@ -23,7 +23,7 @@
                         </svg>
                     </i>
                 </span>
-                <input type="text" id="Search" placeholder="Search Neighborhoods" class="form-control"/>
+                <input type="text" id="Search" placeholder="Search Neighborhoods" class="form-control-searchbar"/>
             </div>
         </div>
     </div>
@@ -101,7 +101,7 @@
     $(document).ready(function ()
     {
         // Search box class
-        const searchBoxClass = ".form-control";
+        const searchBoxClass = ".form-control-searchbar";
         
         // Reset the search box
         $(searchBoxClass).val("");
