--- a/src/Pages/Neighborhood/Update.cshtml
+++ b/src/Pages/Neighborhood/Update.cshtml
@@ -74,29 +74,23 @@
         @{
             var currentUploadedModels = @Model.neighborhood.uploadedImages;
         }
-        @if (currentUploadedModels.Count != 0) {
+        @if (currentUploadedModels.Count != 0)
+        {
             <br />
+
             <div class="form-group">
-            <label asp-for="neighborhood.uploadedImages" class="control-label">Delete uploaded image(s)</label>
-            <ul>
+                <label asp-for="neighborhood.uploadedImages" class="control-label">Delete uploaded image(s)</label>
+                
                 @foreach (var fileImage in currentUploadedModels)
                 {
-                    <li>
-                        <div class="container">
-                            <div class="row" id="row-reduce-top-margin">
-                                <div class="col-sm">
-                                    <label>@fileImage.UploadedImageName</label>
-                                </div>
-                                <div class="col-sm">
-                                    <input value="Delete function is coming" class="btn btn-sm btn-danger" disabled/>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
+                    <br />
+                    <input type="checkbox" name="DeleteFile" value="@fileImage.UploadedImageId" id="@fileImage.UploadedImageId" />
+                    <label for="@fileImage.UploadedImageId">@fileImage.UploadedImageName</label>
                 }
-            </ul>
-            <span asp-validation-for="neighborhood.uploadedImages" class="text-danger"></span>
-        </div>
+            
+                <span asp-validation-for="neighborhood.uploadedImages" class="text-danger"></span>
+            </div>
+            
         }
 
         <br />
