Added style tag ID for delete comment button to site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -526,6 +526,14 @@ div.remove-comment {
     width: 20%;
 }
 
+/*Delete comment button*/
+#neighborhood-delete-comment-icon {
+    color: red;
+    fill: currentColor;
+    border-radius: 8px;
+    border-color: red;
+}
+
 #remove-comment-overflow {
     overflow-wrap: break-word;
 }
