Changed "remove comment" button to icon in Neighborhood.cshtml

--- a/src/Pages/Explore/Neighborhood.cshtml
+++ b/src/Pages/Explore/Neighborhood.cshtml
@@ -156,7 +156,7 @@
                             <div class="col-3 remove-comment">
                                 <form method="post">
                                     <input type="hidden" value=@comment.CommentId class="comment-box" name="CommentId">
-                                    <button type="submit" class="btn btn-primary" value=@comment.CommentId>Remove Comment</button>
+                                    <button type="submit" class="bi bi-trash3-fill" id="neighborhood-delete-comment-icon" value=@comment.CommentId></button>
                                 </form>
                             </div>
                         </div>
