Updated search bar css on site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -515,9 +515,13 @@ ul {
 
 /*Explore Page*/
 .form-control-searchbar {
-    width:90%;
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
+    left: 43px;
+    right: 0px;
+    position: absolute;
+    width: auto;
+    height: 100%;
 }
 
 /*Comments*/
