Added id on header on _Layout.cshtml

--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -26,8 +26,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-<div id="top"></div>
-<header>
+<header id="top">
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-navbar border-bottom box-shadow mb-3">
         <div class="navbar-big-container">
             <img class="navbar-logo" src="~/image/space-needle.svg" />
